--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,3 +37,15 @@ a {
     color-scheme: dark;
   }
 }
+body::-webkit-scrollbar {
+  width: 1em;
+}
+
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+background-color: rgb(119, 119, 119);
+outline: 1px solid slategrey;
+}
