--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+
 }
 
 html,
@@ -25,6 +26,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+
 }
 
 a {
@@ -37,15 +39,20 @@ a {
     color-scheme: dark;
   }
 }
-body::-webkit-scrollbar {
+ body::-webkit-scrollbar {
   width: 1em;
 }
-
 body::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
-
 body::-webkit-scrollbar-thumb {
-background-color: rgb(119, 119, 119);
-outline: 1px solid slategrey;
+  background-color: rgb(119, 119, 119);
+  outline: 1px solid slategrey;
+} 
+
+@media (max-width: 768px) {
+  .ImageQR{
+    width:auto !important;
+
+  } 
 }
